# wiki-roulette

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  wikipedia.py
.github/workflows/: coverage.yaml  release-drafter.yaml  test-pypi.yaml  tests.yaml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/wiki_roulette/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
