[tool.poetry]
name = "wiki-roulette"
version = "0.1.0"
description = "Display random facts from Wikipedia"
authors = ["Thomas Teague <thomas.d.teague1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tteague19/wiki-roulette"
repository = "https://github.com/tteague19/wiki-roulette"
keywords = ["wikipedia", "random"]

[tool.poetry.scripts]
wiki-roulette = "wiki_roulette.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.1"
nox = "^2022.1.7"
black = "^22.6.0"
flake8 = "^4.0.1"
types-requests = "^2.28.1"
types-click = "^7.1.8"
pre-commit = "^2.20.0"
desert = "^2020.11.18"
marshmallow = "^3.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = { extras = ["toml"], version = "^6.4.1" }
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.1"
mypy = "^0.961"
typeguard = "^2.13.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wiki_roulette"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
