[tool.poetry]
name = "wiki-roulette"
version = "1.0.1"
description = "Display random facts from Wikipedia"
authors = ["Thomas Teague <thomas.d.teague1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tteague19/wiki-roulette"
repository = "https://github.com/tteague19/wiki-roulette"
keywords = ["wikipedia", "random"]

[tool.poetry.scripts]
wiki-roulette = "wiki_roulette.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.1"
nox = "^2022.1.7"
black = "^22.6.0"
flake8 = "<5.0"
types-requests = "^2.28.3"
types-click = "^7.1.8"
pre-commit = "^2.20.0"
desert = "^2020.11.18"
marshmallow = "^3.17.0"
mypy = "^0.971"
Pygments = "^2.12.0"
importlib-metadata = {version = "^4.12.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = { extras = ["toml"], version = "^6.4.1" }
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.1"
typeguard = "^2.13.3"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"
mypy = "^0.971"
darglint = "^1.8.1"
xdoctest = "^1.0.1"
Sphinx = "^5.0.2"
sphinx-autodoc-typehints = "^1.18.3"
codecov = "^2.1.12"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wiki_roulette"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
