[tool.poetry]
name = "wiki-roulette"
version = "1.0.2"
description = "Display random facts from Wikipedia"
authors = ["Thomas Teague <thomas.d.teague1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tteague19/wiki-roulette"
repository = "https://github.com/tteague19/wiki-roulette"
documentation = "http://wiki-roulette.readthedocs.io/"
keywords = ["wikipedia", "random"]

[tool.poetry.scripts]
wiki-roulette = "wiki_roulette.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.31.0"
nox = "^2023.4.22"
black = "^23.7.0"
flake8 = "^6.1.0"
types-requests = "^2.31.0.2"
types-click = "^7.1.8"
pre-commit = "^3.3.3"
desert = "^2022.9.22"
marshmallow = "^3.20.1"
mypy = "^1.5.1"
Pygments = "^2.12.0"
importlib-metadata = {version = "^4.12.0", python = "<3.8"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = {extras = ["toml"], version = "^7.3.0"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
typeguard = "^4.1.2"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.1"
sphinx = "^7.2.2"
sphinx-autodoc-typehints = "^1.24.0"
codecov = "^2.1.13"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wiki_roulette"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
